--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 {
     width: 100%;
     height: 100vh;
-    background-image: url(Images/Background.jpg);
+    background-image: url(https://github.com/SampadGiThUb/Personal-Portfolio/blob/main/Images/background.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: right;
